edit channel list query schema
